lingering dark mode issues with h3, figcaption and hyperlinks

--- a/wp-content/themes/bpr2018/resources/assets/sass/_bpr_vars.scss
+++ b/wp-content/themes/bpr2018/resources/assets/sass/_bpr_vars.scss
@@ -10,6 +10,9 @@ $color-gold: #fba919;
 $color-manilla: #ffebb9;
 $color-green: #53550a;
 $color-blue: #31506f;
+$color-link-darkmode: #ccc;
+$color-grey-lightmode: #555;
+$color-grey-darkmode: #AAA;
 
 $color-background-mask: rgba(0, 0, 0, .6);
 $color-blue-background-mask: rgba(49, 80, 111, 0.85);
