--- a/wp-content/themes/bpr2018/resources/assets/sass/_images.scss
+++ b/wp-content/themes/bpr2018/resources/assets/sass/_images.scss
@@ -18,6 +18,18 @@
   margin-left: $spacing-xs;
 }
 
+@media (prefers-color-scheme: light) {
+  #dark {
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  #light {
+    display: none;
+  }
+}
+
 .featured-image {
   @include img-common();
   width: 100%;
