--- a/wp-content/themes/bpr2018/resources/assets/sass/_single_post.scss
+++ b/wp-content/themes/bpr2018/resources/assets/sass/_single_post.scss
@@ -13,7 +13,6 @@
     p, figcaption {
       a {
         text-decoration: underline;
-        color: #555555;
       }
     }
 
